# copilot_enablement

./: .gitignore  README.md  copilot_common_library.md
copilot-prompts/ansible/: deploy_postgres_prompt.md  user_management_prompt.md
copilot-prompts/bash/: docker_healthcheck_prompt.md  log_parser_prompt.md
copilot-prompts/case_studies/: copilot_rollout_1pager.md
copilot-prompts/perl/: config_loader_prompt.md  log_triage_prompt.md  retry_with_jitter.md
copilot-prompts/perl/t/: config.t.md
copilot-prompts/python/: csv_to_json_prompt.md  retry_with_jitter_prompt.md
copilot-prompts/sql/: audit_trail_trigger_prompt.md  rls_demo_cleanup.sql.md  rls_policy_prompt.md
examples/: before_after_copilot.md
guides/: copilot_prompt_playbook.md  copilot_roi_template.md  copilot_rollout_deck.md  copilot_rollout_deck_with_talk_track.md  prompt_review_checklist.md  slides_outline.md
proj/: ai1.md  ai2.md  ai_initial_job.md
prompt-coach/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  pyproject.toml  server.py
prompt-coach/.github/workflows/: prompt-coach.yml
prompt-coach/bench/: bench.csv
prompt-coach/coach/: cli.py  heuristics.py  openai_client.py  scorer.py  templates.py  utils.py
prompt-coach/samples/: sample_prompt_bad.txt  sample_prompt_good.txt
prompt-coach/tests/: test_heuristics.py  test_utils.py
prompt-coach/tools/: ui_streamlit.py
tools/: prompt_coach_tree.md  scaffold_from_tree.md
utilities/scripts/: copilot_rollout_deck.pptx  make_copilot_rollout_deck.py
